[gd_scene load_steps=9 format=3 uid="uid://bwi541hhk6ryr"]

[ext_resource type="Script" path="res://scenes/gameplay/characters/enemy/ghost_small.gd" id="1_hjmqh"]
[ext_resource type="Texture2D" uid="uid://ficstt4lqr85" path="res://assets/sprites/ghost_small.png" id="1_uqr63"]
[ext_resource type="PackedScene" uid="uid://dn6dkghyx5fp" path="res://scenes/gameplay/effects/smoke_generator.tscn" id="2_1v4g7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qnmtd"]
atlas = ExtResource("1_uqr63")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmcu0"]
atlas = ExtResource("1_uqr63")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8r3jv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnmtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmcu0")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uemew"]
size = Vector2(12, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_irilg"]
radius = 704.284

[node name="GhostSmall" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_hjmqh")
health = 2

[node name="SmokeGenerator" parent="." instance=ExtResource("2_1v4g7")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8r3jv")
autoplay = "default"
frame_progress = 0.840772

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_uemew")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_irilg")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
